[project]
name = "pharma-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "django>=6.0.5",
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.136.1",
    "mangum>=0.21.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "typing-inspect>=0.9.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
]
